Adicionado botão de currículo

--- a/src/app/components/contact-btns/contact-btns.component.css
+++ b/src/app/components/contact-btns/contact-btns.component.css
@@ -1,7 +1,27 @@
 section {
 	display: flex;
 	flex-direction: column;
+	row-gap: 1.5rem;
+}
+
+.btnContainers {
+	display: flex;
+	flex-direction: column;
 	row-gap: 1rem;
+}
+
+div {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	column-gap: 1rem;
+	text-align: center;
+}
+
+p {
+	font-size: var(--size-2xl);
+	color: var(--clr-slate200);
+	font-weight: 600;
 }
 
 .btn-whatsapp {
@@ -31,7 +51,7 @@ section {
 		font-size: var(--size-s);
 	}
 
-	section {
+	.btnContainers {
 		flex-direction: row;
 		column-gap: 20px;
 	}
@@ -42,7 +62,6 @@ section {
 		font-size: var(--size-base);
 	}
 }
-
 
 @media (min-width: 1280px) {
 	.btn-whatsapp {
