--- a/src/app/components/featured/featured.component.html
+++ b/src/app/components/featured/featured.component.html
@@ -1,5 +1,5 @@
 <section class="container featured">
-	<h3>Projeto em destaque</h3>
+	<h4 class="title">Projeto em destaque</h4>
 	<div class="featuredLinkWrapper">
 		<a href="{{ featuredLink }}" target="_blank" class="featuredLink">
 			<h2>
