--- a/src/app/components/mobile-nav/mobile-nav.component.html
+++ b/src/app/components/mobile-nav/mobile-nav.component.html
@@ -55,7 +55,7 @@
 			<app-btn
 				btnText="Currículo"
 				btnTarget="_blank"
-				btnLink="http://u.pc.cd/th0rtalK"
+				btnLink="https://drive.google.com/file/d/1G7cZUUrzRkz4hxKLlhHl2ipat4SyjK3I/view?usp=drive_link"
 			></app-btn>
 		</li>
 	</ul>
