Atualizado botão de CV

--- a/src/app/components/contact-btns/contact-btns.component.html
+++ b/src/app/components/contact-btns/contact-btns.component.html
@@ -1,13 +1,4 @@
-<section>
-	<div>
-		<p>Veja meu currículo tradicional!</p>
-		<app-btn
-			btnText="Visualizar"
-			btnTarget="_blank"
-			btnLink="https://drive.google.com/file/d/1G7cZUUrzRkz4hxKLlhHl2ipat4SyjK3I/view?usp=drive_link"
-		></app-btn>
-	</div>
-
+<section class="container">
 	<section class="btnContainers">
 		<app-btn
 			btnText="Contato"
