--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -9,4 +9,13 @@
 	</p>
 
 	<app-contact-btns></app-contact-btns>
+
+	<div>
+		<h3 class="titleCV">Veja meu currículo tradicional!</h3>
+		<app-btn
+			btnText="Visualizar"
+			btnTarget="_blank"
+			btnLink="https://drive.google.com/file/d/1G7cZUUrzRkz4hxKLlhHl2ipat4SyjK3I/view?usp=drive_link"
+		></app-btn>
+	</div>
 </main>
