--- a/src/app/components/contact-btns/contact-btns.component.css
+++ b/src/app/components/contact-btns/contact-btns.component.css
@@ -1,27 +1,17 @@
 section {
+	margin-top: 0.5rem;
+	margin-bottom: 1rem;
 	display: flex;
 	flex-direction: column;
-	row-gap: 1.5rem;
+	row-gap: 2rem;
 }
 
 .btnContainers {
 	display: flex;
 	flex-direction: column;
 	row-gap: 1rem;
-}
-
-div {
-	display: flex;
 	align-items: center;
 	justify-content: center;
-	column-gap: 1rem;
-	text-align: center;
-}
-
-p {
-	font-size: var(--size-2xl);
-	color: var(--clr-slate200);
-	font-weight: 600;
 }
 
 .btn-whatsapp {
