--- a/src/app/components/main/main.component.css
+++ b/src/app/components/main/main.component.css
@@ -40,6 +40,19 @@ section {
 	row-gap: 1rem;
 }
 
+div {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	row-gap: 1rem;
+	text-align: center;
+}
+
+.titleCV {
+	font-size: var(--size-xl);
+	color: var(--clr-slate200);
+}
 
 @media (min-width: 475px) {
 	.hero {
@@ -69,6 +82,12 @@ section {
 	}
 }
 
+@media (min-width: 768px) {
+	.titleCV {
+		font-size: var(--size-2xl);
+	}
+}
+
 @media (min-width: 1024px) {
 	img {
 		width: var(--size-9xl);
@@ -89,11 +108,11 @@ section {
 }
 
 @media (min-width: 1280px) {
-    .hero {
-        gap: 1.5rem;
-    }
+	.hero {
+		gap: 1.5rem;
+	}
 
-    img {
+	img {
 		width: 12rem;
 		height: 12rem;
 	}
@@ -109,14 +128,22 @@ section {
 	p {
 		font-size: var(--size-xl);
 	}
+
+	.titleCV {
+		font-size: var(--size-3xl);
+	}
 }
 
 @media (min-width: 1536px) {
-    img {
+	img {
 		width: 15rem;
 		height: 15rem;
 	}
-    p {
+	p {
 		font-size: var(--size-2xl);
+	}
+
+	.titleCV {
+		font-size: var(--size-4xl);
 	}
 }
