Atualizado link do CV

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -15,7 +15,7 @@
 		<app-btn
 			btnText="Visualizar"
 			btnTarget="_blank"
-			btnLink="https://drive.google.com/file/d/1G7cZUUrzRkz4hxKLlhHl2ipat4SyjK3I/view?usp=drive_link"
+			btnLink="https://drive.google.com/file/d/1G7cZUUrzRkz4hxKLlhHl2ipat4SyjK3I/view?usp=sharing"
 		></app-btn>
 	</div>
 </main>
