--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -22,7 +22,7 @@
 			</button>
 		</li>
 		<li class="button">
-			<app-btn btnText="Currículo" btnTarget="_blank" btnLink="https://drive.google.com/file/d/1G7cZUUrzRkz4hxKLlhHl2ipat4SyjK3I/view?usp=drive_link" />
+			<app-btn btnText="Currículo" btnTarget="_blank" btnLink="https://drive.google.com/file/d/1G7cZUUrzRkz4hxKLlhHl2ipat4SyjK3I/view?usp=sharing" />
 		</li>
 	</ul>
 </nav>
